# GANs

./: .gitignore  C1W1_Your_First_GAN.ipynb  README.md  Release_notes.md  Variational_autoencoders.ipynb  gans-cpu.yml  gans.yml  readme  setup.cfg  setup.py
.github/workflows/: pylint.yml  semantic_release.yml  test.yml
Apply_Generative_Adversarial_Networks/GANs_for_Data_Augmentation_and_Privacy/: C3W1_Assignment.ipynb  README.md
Apply_Generative_Adversarial_Networks/Image-to-Image_Translation_with_Pix2Pix/: C3W2A_Assignment.ipynb  C3W2B_Assignment.ipynb  README.md
Apply_Generative_Adversarial_Networks/Unpaired_Translation_with_CycleGAN/: README.md
Build_Basic_Generative_Adversarial_Networks/: README.md  myC1W1.ipynb  myC1W1_myGAN.ipynb  myC1W2.ipynb  myC1W2_DCGAN.ipynb  myC1W3.ipynb  myC1W3_WGAN_GP.ipynb  myC1W4B_Controllable_GAN.ipynb
Build_Basic_Generative_Adversarial_Networks/Conditional_and_controllable_Generations/: C1W4B_Controllable_Generation.ipynb  README.md  myC1W4A_Conditional_GAN.ipynb  myC1W4B_Controllable_GAN.ipynb
Build_Basic_Generative_Adversarial_Networks/Deep_convolutional_GANs/: README.md
Build_Basic_Generative_Adversarial_Networks/Wasserstein_GANs_with_Gradient_Penalty/: README.md
Build_Basic_Generative_Adversarial_Networks/intro_GANs/: README.md
Build_Basic_Generative_Adversarial_Networks/notebooks/: C1W3_WGAN_GP.ipynb  Intro_to_PyTorch.ipynb  SNGAN.ipynb
gans/: __init__.py  discriminator.py  generator.py  loss_function.py  myGANs.py
gans/datasets/: CelebA.py  (+1 more)
models/: __init__.py
test/: test_discrinator.py  test_generator.py
(+46 files in other folders)
