[metadata]
name = gans
version = attr: gans.__version__.__version__
author = Caibin Sheng
author_email = shengcaibin@gmail.com
url = https://github.com/CaibinSh/GANs
description = Generative Adversarial Networks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = generative models, machine learning, deep learning, MNIST, generator, discriminator
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    torch >= 1.10.0
    pytorch-lightning >= 1.6.3
    pandas >= 1.3.4
    torchvision >= 0.9.0
    tqdm >= 4.62.3
    seaborn >= 0.11.2
    tensorboard >= 2.2.1
    scikit-learn >= 1.0.1
package_dir=
    =.

[semantic_release]
version_variable=gans/__version__.py:__version__
branch=develop
hvcs=github
upload_to_repository=false
upload_to_pypi=false
upload_to_release=false
patch_without_tag=false
changelog_file=Release_notes.md